--- a/.env.example
+++ b/.env.example
@@ -15,16 +15,26 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+# BROADCAST_DRIVER=log
+# CACHE_DRIVER=file
+# FILESYSTEM_DISK=local
+# QUEUE_CONNECTION=sync
+# SESSION_DRIVER=file
+# SESSION_LIFETIME=120
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+# REDIS_HOST=127.0.0.1
+# REDIS_PASSWORD=null
+# REDIS_PORT=6379
+REDIS_CLIENT=predis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -50,3 +60,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LARAVEL_ECHO_SERVER_REDIS_HOST=redis
+LARAVEL_ECHO_SERVER_REDIS_PORT=6379
+LARAVEL_ECHO_SERVER_AUTH_HOST=http://webserver:80
+LARAVEL_ECHO_SERVER_DEBUG=true
+
+APP_PORT=4000
+MIX_FRONTEND_PORT=4000
+ADMINER_PORT=8080
