--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   app:
     build: .
     volumes:
-      - ../:/var/www/html
+      - ./:/var/www/html
     depends_on:
       - db
-      - redis
+      # - redis
       # - laravel_echo_server
 
   # Nginx service
@@ -16,20 +16,17 @@ services:
     ports:
       - "${APP_PORT}:80"
     volumes:
-      - ../:/var/www/html
-      - ./nginx.conf.default:/etc/nginx/conf.d/default.conf
+      - ./:/var/www/html
+      - ./docker-laravel/nginx.conf:/etc/nginx/conf.d/default.conf
 
   # Mysql service
   db:
     image: mysql:8.0.27
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: password
     volumes:
-      - ./data/db:/var/lib/mysql/
+      - ./docker-laravel/data/db:/var/lib/mysql/
 
   # UI Database management service
   adminer:
@@ -41,17 +38,17 @@ services:
       - db
 
   # Laravel echo server
-  laravel_echo_server:
-    build:
-      context: ./laravel-echo-server
-      dockerfile: Dockerfile
-    volumes:
-      - ../../.env:/app/.env
-    restart: unless-stopped
+  # laravel_echo_server:
+  #   build:
+  #     context: ./docker-laravel/laravel-echo-server
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - ./.env:/app/.env
+  #   restart: unless-stopped
 
   # Redis service
-  redis:
-    image: redis:6.2-alpine3.15
-    volumes:
-      - ./data/redis:/data
-    restart: unless-stopped
+  # redis:
+  #   image: redis:6.2-alpine3.15
+  #   volumes:
+  #     - ./docker-laravel/data/redis:/data
+  #   restart: unless-stopped
