--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,5 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-docker-laravel/data/redis
-docker-laravel/data/db
+.docker/data/redis
+.docker/data/db
