--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "${APP_PORT}:80"
     volumes:
       - ./:/var/www/html
-      - ./docker-laravel/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./.docker/nginx.conf:/etc/nginx/conf.d/default.conf
 
   # Mysql service
   db:
@@ -26,7 +26,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
     volumes:
-      - ./docker-laravel/data/db:/var/lib/mysql/
+      - ./.docker/data/db:/var/lib/mysql/
 
   # UI Database management service
   adminer:
@@ -40,7 +40,7 @@ services:
   # Laravel echo server
   # laravel_echo_server:
   #   build:
-  #     context: ./docker-laravel/laravel-echo-server
+  #     context: ./.docker/laravel-echo-server
   #     dockerfile: Dockerfile
   #   volumes:
   #     - ./.env:/app/.env
@@ -50,5 +50,5 @@ services:
   # redis:
   #   image: redis:6.2-alpine3.15
   #   volumes:
-  #     - ./docker-laravel/data/redis:/data
+  #     - ./.docker/data/redis:/data
   #   restart: unless-stopped
